# app/Http/Controllers/Backend/OrderController.php
@@ -3,93 +3,153 @@
 namespace App\Http\Controllers\Backend;
 
 use App\Http\Controllers\Controller;
-use Illuminate\Http\Request;
-
+use App\Http\Filters\OrderFilter;
+use App\Http\Resources\OrderResource;
+use App\Http\Resources\OrderResourceCollection;
 use App\Models\Order;
 use App\Models\OrderItem;
 use App\Models\Product;
-use Auth;
-use Carbon\Carbon;
-use PDF;
 use DB;
- 
- 
+use PDF;
+
 
 class OrderController extends Controller
 {
-    
-	// Pending Orders 
+
+    /**
+     * @OA\Get(path="/api/orders",
+     *   tags={"Orders"},
+     *   summary="Returns orders as json",
+     *   description="Returns orders",
+     *   operationId="getOrders",
+     *   parameters={},
+     *   @OA\Response(
+     *     response=200,
+     *     description="successful operation",
+     *     @OA\Schema(
+     *       additionalProperties={
+     *         "type":"integer",
+     *         "format":"int32"
+     *       }
+     *     )
+     *   )
+     * )
+     */
+    public function index(OrderFilter $filters)
+    {
+        [$entries, $count, $sum] = Order::filter($filters);
+        $entries = $entries->get();
+        return response(new OrderResourceCollection(['data' => $entries, 'count' => $count]));
+    }
+    /**
+     * @OA\Get(path="/api/orders/{orderId}",
+     *   tags={"Orders"},
+     *   summary="Returns order by id as json",
+     *   description="Returns orders by id",
+     *   operationId="getOrdersById",
+     *
+     *  @OA\Parameter(
+     *       description="ID of order",
+     *       name="orderId",
+     *       required=true,
+     *       in="path",
+     *       example="1",
+     *       @OA\Schema(
+     *           type="integer",
+     *           format="int64"
+     *       )
+     *   ),
+     *
+     *   @OA\Response(
+     *     response=200,
+     *     description="successful operation",
+     *     @OA\Schema(
+     *       additionalProperties={
+     *         "type":"integer",
+     *         "format":"int32"
+     *       }
+     *     )
+     *   )
+     * )
+     */
+    public function show(int $id)
+    {
+        $entry = Order::query()->findOrFail($id);
+        return response(new OrderResource(['data' => $entry]));
+    }
+
+    // Pending Orders
 	public function PendingOrders(){
 		$orders = Order::where('status','pending')->orderBy('id','DESC')->get();
 		return view('backend.orders.pending_orders',compact('orders'));
 
-	} // end mehtod 
+	} // end mehtod
 
 
-	// Pending Order Details 
+	// Pending Order Details
 	public function PendingOrdersDetails($order_id){
 
 		$order = Order::with('division','district','state','user')->where('id',$order_id)->first();
     	$orderItem = OrderItem::with('product')->where('order_id',$order_id)->orderBy('id','DESC')->get();
     	return view('backend.orders.pending_orders_details',compact('order','orderItem'));
 
-	} // end method 
+	} // end method
 
 
 
-	// Confirmed Orders 
+	// Confirmed Orders
 	public function ConfirmedOrders(){
 		$orders = Order::where('status','confirm')->orderBy('id','DESC')->get();
 		return view('backend.orders.confirmed_orders',compact('orders'));
 
-	} // end mehtod 
+	} // end mehtod
 
 
-	// Processing Orders 
+	// Processing Orders
 	public function ProcessingOrders(){
 		$orders = Order::where('status','processing')->orderBy('id','DESC')->get();
 		return view('backend.orders.processing_orders',compact('orders'));
 
-	} // end mehtod 
+	} // end mehtod
 
 
-		// Picked Orders 
+		// Picked Orders
 	public function PickedOrders(){
 		$orders = Order::where('status','picked')->orderBy('id','DESC')->get();
 		return view('backend.orders.picked_orders',compact('orders'));
 
-	} // end mehtod 
+	} // end mehtod
 
 
 
-			// Shipped Orders 
+			// Shipped Orders
 	public function ShippedOrders(){
 		$orders = Order::where('status','shipped')->orderBy('id','DESC')->get();
 		return view('backend.orders.shipped_orders',compact('orders'));
 
-	} // end mehtod 
+	} // end mehtod
 
 
-			// Delivered Orders 
+			// Delivered Orders
 	public function DeliveredOrders(){
 		$orders = Order::where('status','delivered')->orderBy('id','DESC')->get();
 		return view('backend.orders.delivered_orders',compact('orders'));
 
-	} // end mehtod 
+	} // end mehtod
 
 
-				// Cancel Orders 
+				// Cancel Orders
 	public function CancelOrders(){
 		$orders = Order::where('status','cancel')->orderBy('id','DESC')->get();
 		return view('backend.orders.cancel_orders',compact('orders'));
 
-	} // end mehtod 
+	} // end mehtod
 
 
 
 
 	public function PendingToConfirm($order_id){
-   
+
       Order::findOrFail($order_id)->update(['status' => 'confirm']);
 
       $notification = array(
@@ -107,7 +167,7 @@ class OrderController extends Controller
 
 
 	public function ConfirmToProcessing($order_id){
-   
+
       Order::findOrFail($order_id)->update(['status' => 'processing']);
 
       $notification = array(
@@ -123,7 +183,7 @@ class OrderController extends Controller
 
 
 		public function ProcessingToPicked($order_id){
-   
+
       Order::findOrFail($order_id)->update(['status' => 'picked']);
 
       $notification = array(
@@ -138,7 +198,7 @@ class OrderController extends Controller
 
 
 	 public function PickedToShipped($order_id){
-   
+
       Order::findOrFail($order_id)->update(['status' => 'shipped']);
 
       $notification = array(
@@ -158,8 +218,8 @@ class OrderController extends Controller
 	 foreach ($product as $item) {
 	 	Product::where('id',$item->product_id)
 	 			->update(['product_qty' => DB::raw('product_qty-'.$item->qty)]);
-	 } 
- 
+	 }
+
       Order::findOrFail($order_id)->update(['status' => 'delivered']);
 
       $notification = array(
@@ -177,16 +237,15 @@ class OrderController extends Controller
 
 		$order = Order::with('division','district','state','user')->where('id',$order_id)->first();
     	$orderItem = OrderItem::with('product')->where('order_id',$order_id)->orderBy('id','DESC')->get();
-    	 
+
 		$pdf = PDF::loadView('backend.orders.order_invoice',compact('order','orderItem'))->setPaper('a4')->setOptions([
 				'tempDir' => public_path(),
 				'chroot' => public_path(),
 		]);
 		return $pdf->download('invoice.pdf');
 
-	} // end method 
+	} // end method
 
 
 
 }
- 
